menu add project

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="main-menu">
           <a href="#">Home</a>
           <a href="#">Contact</a>
-          <a href="#">Blog</a>
+          <a href="#">Project</a>
           <a href="#">About</a>
         </div>
         <div class="right-menu">
