--- a/index.html
+++ b/index.html
@@ -1,40 +1,72 @@
 <html lang="en">
   <head>
-    <title>Document</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded"
-      rel="stylesheet"
-    />
-
-    <link rel="stylesheet" href="style.css" />
+    <title>Mehedi Hasan</title>
+    <link rel="stylesheet" href="hello.css" />
   </head>
   <body>
     <nav>
       <div class="container">
-        <div class="brand-section">
-          <div class="brand-logo">
-            <span class="material-symbols-rounded"> store </span>
-          </div>
-          <div class="brand-title">
-            <a href="#">
-              <h2>Brand Name</h2>
-            </a>
+        <div class="logo">
+          <div class="logo-title">
+            <a href="#"><h1>TechVantage</h1></a>
           </div>
         </div>
         <div class="main-menu">
           <a href="#">Home</a>
-          <a href="#">Contact</a>
-          <a href="#">Project</a>
           <a href="#">About</a>
+          <a href="#">Contact</a>
+          <a href="#">Blog</a>
+          <a href="#">Service</a>
         </div>
-        <div class="right-menu">
-          <a href="#">Menu 1</a>
-          <a href="#">Menu 2</a>
-          <button>
-            <span class="material-symbols-rounded"> account_circle </span>
-          </button>
+        <div class="button">
+          <button class="trans">Log in</button>
+          <button>Get started now</button>
         </div>
       </div>
     </nav>
+
+    <section class="sec">
+      <div class="content">
+        <h1 class="heading">
+          TechVantage <br />
+          Solutions
+        </h1>
+        <p>
+          Empowering Businesses with Innovative Solutions for Success and <br />
+          Growth. Streamline workflows, foster collaboration, and unlock your
+          true <br />
+          potential with TechVantage. Experience the future of work today.
+        </p>
+        <button>Start Your Free Trial Now</button>
+        <button class="trans">Request a demo</button>
+      </div>
+      <div class="image">
+        <img src="Hero.jpg" alt="hero" />
+      </div>
+    </section>
+
+    
+
+    <!-- <div class="navbar">
+
+        <div class="icon">
+          <h1 class="logo">TechVantage</h1>
+        </div>
+        <div class="menu">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">About</a></li>
+
+            </ul>
+          
+          </div> 
+          <div class="btn">
+            <button>Log in</button>
+            <button>Log in</button> 
+        </div>
+      </div>
+     -->
   </body>
 </html>
