--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <title>Mehedi Hasan</title>
-    <link rel="stylesheet" href="hello.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav>
